console增加服务显示
